--- a/package.json
+++ b/package.json
@@ -24,5 +24,14 @@
     "url": "https://github.com/mayahq/maya-red-zoom/issues"
   },
   "homepage": "https://github.com/mayahq/maya-red-zoom#readme",
-  "dependencies": {}
+  "dependencies": {
+    "crypto": "^1.0.1",
+    "fastmq": "^1.3.8",
+    "node-schedule": "^2.0.0"
+  },
+  "node-red": {
+    "nodes": {
+      "zoom-auth": "zoom/auth.js"
+    }
+  }
 }
