--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
   },
   "homepage": "#readme",
   "dependencies": {
-    "@mayahq/module-sdk": "^0.1.0"
+    "@mayahq/module-sdk": "^0.2.5",
+    "crypto": "^1.0.1",
+    "fastmq": "^1.3.8",
+    "node-fetch": "^2.6.1",
+    "node-schedule": "^2.0.0"
   },
   "nodepath": "src/nodes",
   "nodeRedModuleName": "maya-red-zoom",
@@ -23,7 +27,8 @@
     "nodes": {
       "zoom-auth": "src/nodes/zoomAuth/zoomAuth.node.js",
       "create-meeting": "src/nodes/createMeeting/createMeeting.node.js",
-      "list-meetings": "src/nodes/listMeetings/listMeetings.node.js"
+      "list-meetings": "src/nodes/listMeetings/listMeetings.node.js",
+      "list-meeting-registrants": "src/nodes/listMeetingRegistrants/listMeetingRegistrants.node.js"
     }
   }
 }
