Timezone sanitization for list meeting output

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@mayahq/module-sdk": "^0.4.8",
     "crypto": "^1.0.1",
+    "moment-timezone": "^0.5.33",
     "node-fetch": "^2.6.1",
     "node-schedule": "^2.0.0"
   },
