--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "@mayahq/module-sdk": "^0.4.11",
     "crypto": "^1.0.1",
     "moment-timezone": "^0.5.33",
-    "node-fetch": "^2.6.1",
-    "node-schedule": "^2.0.0"
+    "node-fetch": "^2.6.1"
   },
   "nodepath": "src/nodes",
   "nodeRedModuleName": "maya-red-zoom",
