--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "homepage": "#readme",
   "dependencies": {
-    "@mayahq/module-sdk": "file:../../module-sdk",
+    "@mayahq/module-sdk": "^2.0.7",
     "axios": "^0.26.1",
     "crypto": "^1.0.1",
     "moment-timezone": "^0.5.33",
